--- a/other/restrict_node_selection/resource.yaml
+++ b/other/restrict_node_selection/resource.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: myapp-pod
+  name: myapp-pod-1
   labels:
-    app: myapp
+    app: myapp-1
 spec:
   containers:
   - name: nginx
@@ -17,9 +17,9 @@ spec:
 apiVersion: v1
 kind: Pod
 metadata:
-  name: myapp-pod1
+  name: myapp-pod-2
   labels:
-    app: myapp
+    app: myapp-2
 spec:
   containers:
   - name: nginx
