--- a/other/block-pod-exec-by-pod-name.yaml
+++ b/other/block-pod-exec-by-pod-name.yaml
@@ -13,7 +13,7 @@ metadata:
       This policy blocks Pod exec commands to Pods beginning with the name
       `myapp-maintenance-`.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: enforce
   background: false
   rules:
   - name: deny-exec-myapp-maintenance
