--- a/other/block_updates_deletes.yaml
+++ b/other/block_updates_deletes.yaml
@@ -19,7 +19,7 @@ spec:
   - name: block-updates-deletes
     match:
       resources:
-        kind:
+        kinds:
         - Service
         selector:
           matchLabels:
