--- a/openshift/disallow-deprecated-apis/disallow-deprecated-apis.yaml
+++ b/openshift/disallow-deprecated-apis/disallow-deprecated-apis.yaml
@@ -5,7 +5,11 @@ metadata:
   annotations:
     policies.kyverno.io/title: Disallow deprecated APIs
     policies.kyverno.io/category: OpenShift
-    policies.kyverno.io/subject: OpenShift APIs
+    policies.kyverno.io/severity: medium
+    kyverno.io/kyverno-version: 1.6.0
+    policies.kyverno.io/minversion: 1.6.0
+    kyverno.io/kubernetes-version: "1.20"
+    policies.kyverno.io/subject: ClusterRole,ClusterRoleBinding,Role,RoleBinding
     policies.kyverno.io/description: >-
       OpenShift APIs are sometimes deprecated and removed after a few releases.
       As a best practice, older API versions should be replaced with newer versions.
