--- a/openshift/disallow-jenkins-pipeline-strategy/disallow-jenkins-pipeline-strategy.yaml
+++ b/openshift/disallow-jenkins-pipeline-strategy/disallow-jenkins-pipeline-strategy.yaml
@@ -5,7 +5,11 @@ metadata:
   annotations:
     policies.kyverno.io/title: Disallow OpenShift Jenkins Pipeline Build Strategy 
     policies.kyverno.io/category: OpenShift
-    policies.kyverno.io/subject: OpenShift Build
+    policies.kyverno.io/severity: medium
+    kyverno.io/kyverno-version: 1.6.0
+    policies.kyverno.io/minversion: 1.6.0
+    kyverno.io/kubernetes-version: "1.20"
+    policies.kyverno.io/subject: BuildConfig
     policies.kyverno.io/description: >-
       The Jenkins Pipeline Build Strategy has been deprecated. This policy prevents its use. Use OpenShift Pipelines instead.
 spec:
