--- a/openshift/enforce-etcd-encryption/enforce-etcd-encryption.yaml
+++ b/openshift/enforce-etcd-encryption/enforce-etcd-encryption.yaml
@@ -5,6 +5,10 @@ metadata:
   annotations:
     policies.kyverno.io/title: Enforce etcd encryption in OpenShift
     policies.kyverno.io/category: OpenShift
+    policies.kyverno.io/severity: high
+    kyverno.io/kyverno-version: 1.6.0
+    policies.kyverno.io/minversion: 1.6.0
+    kyverno.io/kubernetes-version: "1.20"
     policies.kyverno.io/subject: APIServer
     policies.kyverno.io/description: >-
       Encrption at rest is a security best practice. This policy ensures encryption is enabled for etcd in OpenShift clusters.
