--- a/openshift/validate-routes/check-routes.yaml
+++ b/openshift/validate-routes/check-routes.yaml
@@ -5,6 +5,10 @@ metadata:
   annotations:
     policies.kyverno.io/title: Require TLS routes in OpenShift
     policies.kyverno.io/category: OpenShift
+    policies.kyverno.io/severity: high
+    kyverno.io/kyverno-version: 1.6.0
+    policies.kyverno.io/minversion: 1.6.0
+    kyverno.io/kubernetes-version: "1.20"
     policies.kyverno.io/subject: Route
     policies.kyverno.io/description: |-
       HTTP traffic is not encrypted and hence insecure. This policy prevents configuration of OpenShift HTTP routes.
