--- a/best-practices/nginx_path_checks/restrict-path.yaml
+++ b/best-practices/nginx_path_checks/restrict-path.yaml
@@ -6,7 +6,7 @@ metadata:
     policies.kyverno.io/title: Restrict NGINX Ingress path values 
     policies.kyverno.io/category: Security
     policies.kyverno.io/severity: high
-    policies.kyverno.io/subject: Ingress, NGINX Ingress
+    policies.kyverno.io/subject: Ingress
     policies.kyverno.io/minversion: 1.6.0
     kyverno.io/kyverno-version: 1.6.0
     kyverno.io/kubernetes-version: 1.23
