--- a/best-practices/nginx-custom-snippets/disallow-custom-snippets.yaml
+++ b/best-practices/nginx-custom-snippets/disallow-custom-snippets.yaml
@@ -6,8 +6,8 @@ metadata:
     policies.kyverno.io/title: Disallow Custom Snippets
     policies.kyverno.io/category: Security
     policies.kyverno.io/subject: ConfigMap, Ingress
-    policies.kyverno.io/minversion: 1.6.0
-    kyverno.io/kyverno-version: 1.6.0
+    policies.kyverno.io/minversion: "1.6.0"
+    kyverno.io/kyverno-version: "1.6.0"
     kyverno.io/kubernetes-version: "1.23"
     policies.kyverno.io/description: >-
       Users that can create or update ingress objects can use the custom snippets 
