--- a/best-practices/nginx_annotation_checks/restrict-annotations.yaml
+++ b/best-practices/nginx_annotation_checks/restrict-annotations.yaml
@@ -7,8 +7,8 @@ metadata:
     policies.kyverno.io/category: Security
     policies.kyverno.io/severity: high
     policies.kyverno.io/subject: Ingress
-    policies.kyverno.io/minversion: 1.6.0
-    kyverno.io/kyverno-version: 1.6.0
+    policies.kyverno.io/minversion: "1.6.0"
+    kyverno.io/kyverno-version: "1.6.0"
     kyverno.io/kubernetes-version: "1.23"
     policies.kyverno.io/description: >-
       This policy mitigates CVE-2021-25746 by restricting `metadata.annotations` to safe values.
