--- a/other/replace_image_registry/replace_image_registry.yaml
+++ b/other/replace_image_registry/replace_image_registry.yaml
@@ -3,28 +3,33 @@ kind: ClusterPolicy
 metadata:
   name: replace-image-registry
   annotations:
-    pod-policies.kyverno.io/autogen-controllers: none
     policies.kyverno.io/title: Replace Image Registry
+    pod-policies.kyverno.io/autogen-controllers: none
     policies.kyverno.io/category: Sample
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
-    policies.kyverno.io/minversion: 1.5.4
+    kyverno.io/kyverno-version: 1.7.2
+    policies.kyverno.io/minversion: 1.6.0
+    kyverno.io/kubernetes-version: "1.23"
     policies.kyverno.io/description: >-
       Rather than blocking Pods which come from outside registries,
       it is also possible to mutate them so the pulls are directed to
       approved registries. In some cases, those registries may function as
       pull-through proxies and can fetch the image if not cached.
-      This policy policy mutates all images either
-      in the form 'image:tag' or 'registry.corp.com/image:tag' to be 
-      `myregistry.corp.com/`. Any path in the image name will be preserved.
+      This policy mutates all images either in the form 'image:tag' or
+      'registry.corp.com/image:tag' to be `myregistry.corp.com/`. Any
+      path in the image name will be preserved. Note that this mutates Pods
+      directly and not their controllers. It can be changed if desired but
+      if so may need to not match on Pods.      
 spec:
   background: false
   rules:
     - name: replace-image-registry-pod-containers
       match:
-        resources:
-          kinds:
-          - Pod
+        any:
+        - resources:
+            kinds:
+            - Pod
       mutate:
         foreach:
         - list: "request.object.spec.containers"
@@ -32,16 +37,16 @@ spec:
             spec:
               containers:
               - name: "{{ element.name }}"
-                image: |-    
-                        {{ regex_replace_all('^[^/]+', '{{element.image}}', 'myregistry.corp.com' )}}
+                image: "{{ regex_replace_all_literal('^[^/]+', '{{element.image}}', 'myregistry.corp.com' )}}"
     - name: replace-image-registry-pod-initcontainers
       match:
-        resources:
-          kinds:
-          - Pod
+        any:
+        - resources:
+            kinds:
+            - Pod
       preconditions:
         all:
-        - key: "{{ request.object.spec.initContainers[] || '' | length(@) }}"
+        - key: "{{ request.object.spec.initContainers[] || `[]` | length(@) }}"
           operator: GreaterThanOrEquals
           value: 1
       mutate:
@@ -51,42 +56,4 @@ spec:
             spec:
               initContainers:
               - name: "{{ element.name }}"
-                image: |-    
-                        {{ regex_replace_all('^[^/]+', '{{element.image}}', 'myregistry.corp.com' )}}
-    - name: replace-image-registry-depl-containers
-      match:
-        resources:
-          kinds:
-          - Deployment
-      mutate:
-        foreach:
-        - list: "request.object.spec.template.spec.containers"
-          patchStrategicMerge:
-            spec:
-              template:
-                spec:
-                  containers:
-                  - name: "{{ element.name }}"
-                    image: |-    
-                            {{ regex_replace_all('^[^/]+', '{{element.image}}', 'myregistry.corp.com' )}}
-    - name: replace-image-registry-depl-initcontainers
-      match:
-        resources:
-          kinds:
-          - Deployment
-      preconditions:
-        all:
-        - key: "{{ request.object.spec.template.spec.initContainers[] || '' | length(@) }}"
-          operator: GreaterThanOrEquals
-          value: 1
-      mutate:
-        foreach:
-        - list: "request.object.spec.template.spec.initContainers"
-          patchStrategicMerge:
-            spec:
-              template:
-                spec:
-                  initContainers:
-                  - name: "{{ element.name }}"
-                    image: |-    
-                            {{ regex_replace_all('^[^/]+', '{{element.image}}', 'myregistry.corp.com' )}}
+                image: "{{ regex_replace_all_literal('^[^/]+', '{{element.image}}', 'myregistry.corp.com' )}}"
