--- a/other/verify_image_with_multi_keys.yaml
+++ b/other/verify_image_with_multi_keys.yaml
@@ -7,12 +7,16 @@ metadata:
     policies.kyverno.io/category: Sample
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
-    policies.kyverno.io/minversion: 1.5.0
+    policies.kyverno.io/minversion: 1.7.0
+    kyverno.io/kyverno-version: 1.7.2
+    kyverno.io/kubernetes-version: "1.23"
     policies.kyverno.io/description: >-
       There may be multiple keys used to sign images based on
       the parties involved in the creation process. This image
-      verification policy looks like a global key in a ConfigMap
-      and also an image-specific key in the same ConfigMap.
+      verification policy requires the named image be signed by
+      two separate keys. It will search for a global "production"
+      key in a ConfigMap called `key` in the `default` Namespace
+      and also a Namespace key in the same ConfigMap.
 spec:
   validationFailureAction: enforce
   background: false
@@ -27,11 +31,15 @@ spec:
       - name: keys
         configMap:
           name: keys
-          namespace: default 
+          namespace: default
       verifyImages:
-        # check global key
-        - image: "*"
-          key: "{{ keys.data.org }}"
-        # check image specific key - lookup via image name
-        - image: "ghcr.io/kyverno/*"
-          key: "{{ keys.data.{{ images.name }} }}"
+      - imageReferences:
+        - "ghcr.io/myorg/myimage*"
+        required: true
+        attestors:
+        - count: 2
+          entries:
+          - keys: 
+              publicKeys: "{{ keys.data.production }}"
+          - keys: 
+              publicKeys: "{{ keys.data.{{request.namespace}} }}"
