--- a/linkerd/add_policy_annotation/add-policy-annotation.yaml
+++ b/linkerd/add_policy_annotation/add-policy-annotation.yaml
@@ -6,9 +6,14 @@ metadata:
     policies.kyverno.io/title: Add Policy Annotation
     policies.kyverno.io/category: Linkerd
     policies.kyverno.io/severity: medium
-    policies.kyverno.io/subject: Namespace
+    policies.kyverno.io/subject: Namespace,Annotation
     policies.kyverno.io/description: >-
-      WIP     
+      Linkerd will, by default, allow all incoming traffic to Pods in the mesh
+      including that from outside the cluster network. It may be desired to change
+      this behavior on certain new Namespaces to allow a different level, for example
+      only allow from authenticated Pods in the mesh. This policy sets the annotation
+      `config.linkerd.io/default-inbound-policy` to `all-authenticated` for new Namespaces.
+      It can be customized with exclusions to more tightly control its application.
 spec:
   rules:
   - name: namespaces-all-authenticated
