--- a/linkerd/add_policy_annotation/add-policy-annotation.yaml
+++ b/linkerd/add_policy_annotation/add-policy-annotation.yaml
@@ -10,20 +10,25 @@ metadata:
     policies.kyverno.io/description: >-
       Linkerd will, by default, allow all incoming traffic to Pods in the mesh
       including that from outside the cluster network. It may be desired to change
-      this behavior on certain new Namespaces to allow a different level, for example
-      only allow from authenticated Pods in the mesh. This policy sets the annotation
-      `config.linkerd.io/default-inbound-policy` to `all-authenticated` for new Namespaces.
+      this behavior on certain new Namespaces to deny all traffic so it may be selectively
+      opened using Linkerd policy objects. This policy sets the annotation
+      `config.linkerd.io/default-inbound-policy` to `deny` for new Namespaces.
       It can be customized with exclusions to more tightly control its application.
 spec:
   rules:
-  - name: namespaces-all-authenticated
+  - name: deny-inbound-namespace
     match:
       any:
       - resources:
           kinds:
           - Namespace
+    preconditions:
+      any:
+      - key: "{{ request.operation }}"
+        operator: Equals
+        value: CREATE
     mutate:
       patchStrategicMerge:
         metadata:
           annotations:
-            config.linkerd.io/default-inbound-policy: all-authenticated
+            config.linkerd.io/default-inbound-policy: deny
