--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,9 +28,9 @@ jobs:
           ref: ${{ github.base_ref || github.ref_name }}
 
       - name: Set up Go 
-        uses: actions/setup-go@84cbf8094393cdc5fe1fe1671ff2647332956b1a
+        uses: actions/setup-go@f6164bd8c8acb4a71fb2791a8b6c4024ff038dab # 3.0.0
         with:
-          go-version: 1.17
+          go-version: 1.18
 
       - name: Test Policy
         run: go run ./cmd/cli/kubectl-kyverno test ../policies
