--- a/linkerd/add-linkerd-policy-annotation/add-linkerd-policy-annotation.yaml
+++ b/linkerd/add-linkerd-policy-annotation/add-linkerd-policy-annotation.yaml
@@ -3,7 +3,7 @@ kind: ClusterPolicy
 metadata:
   name: add-linkerd-policy-annotation
   annotations:
-    policies.kyverno.io/title: Add Policy Annotation
+    policies.kyverno.io/title: Add Linkerd Policy Annotation
     policies.kyverno.io/category: Linkerd
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Namespace,Annotation
@@ -12,7 +12,7 @@ metadata:
       including that from outside the cluster network. It may be desired to change
       this behavior on certain new Namespaces to deny all traffic so it may be selectively
       opened using Linkerd policy objects. This policy sets the annotation
-      `config.linkerd.io/default-inbound-policy` to `deny` for new Namespaces.
+      `config.linkerd.io/default-inbound-policy` to `deny`, if not present, for new Namespaces.
       It can be customized with exclusions to more tightly control its application.
 spec:
   rules:
@@ -22,13 +22,8 @@ spec:
       - resources:
           kinds:
           - Namespace
-    preconditions:
-      any:
-      - key: "{{ request.operation }}"
-        operator: Equals
-        value: CREATE
     mutate:
       patchStrategicMerge:
         metadata:
           annotations:
-            config.linkerd.io/default-inbound-policy: deny
+            +(config.linkerd.io/default-inbound-policy): deny
