--- a/linkerd/add-linkerd-policy-annotation/add-linkerd-policy-annotation.yaml
+++ b/linkerd/add-linkerd-policy-annotation/add-linkerd-policy-annotation.yaml
@@ -9,8 +9,8 @@ metadata:
     policies.kyverno.io/subject: Namespace,Annotation
     policies.kyverno.io/description: >-
       Linkerd will, by default, allow all incoming traffic to Pods in the mesh
-      including that from outside the cluster network. It may be desired to change
-      this behavior on certain new Namespaces to deny all traffic so it may be selectively
+      including that from outside the cluster network. In many cases, this default
+      needs to be changed to deny all traffic so it may be selectively
       opened using Linkerd policy objects. This policy sets the annotation
       `config.linkerd.io/default-inbound-policy` to `deny`, if not present, for new Namespaces.
       It can be customized with exclusions to more tightly control its application.
