--- a/external-secret-operator/add-external-secret-prefix/add-external-secret-prefix.yaml
+++ b/external-secret-operator/add-external-secret-prefix/add-external-secret-prefix.yaml
@@ -15,16 +15,17 @@ metadata:
       External Secret Operator proposes to use kyverno to force ExternalSecrets
       to have namespace prefix so that kubernetes administrators do not need to
       define permissions and users per namespace.
-      Doing this developers are abstracted by administrators naming convenction and will not 
-      be able to access to secrets from other namespaces.
-      In this example on patch change "prefix-" for your prefix. For example: {{ request.namespace }}
+      Doing this developers are abstracted by administrators naming convention and will not 
+      be able to access secrets from other namespaces.
+      In this example, in the JSON patch change "prefix-" to your preferred prefix. For example: {{ request.namespace }}
 spec:
   rules:
   - name: add-external-secret-prefix
     match:
-      resources:
-        kinds:
-        - ExternalSecret
+      any:
+      - resources:
+          kinds:
+          - ExternalSecret
     mutate:
       foreach: 
       - list: "request.object.spec.data"
