--- a/kubeops/config-syncer-secret-generation-from-rancher-capi/config-syncer-secret-generation-from-rancher-capi.yaml
+++ b/kubeops/config-syncer-secret-generation-from-rancher-capi/config-syncer-secret-generation-from-rancher-capi.yaml
@@ -42,7 +42,7 @@ spec:
       variable:
         value: |
           {{ secretList | [].{
-              "name": metadata.name,
+              "name": replace_all(metadata.name, '-kubeconfig', ''),
               "cluster": data.value | base64_decode(@) | parse_yaml(@).clusters[].cluster[] | [0] } || '\[\]'
           }}
         jmesPath: 'to_string(@)'
@@ -50,7 +50,7 @@ spec:
       variable:
         value: |
           {{ secretList | [].{
-              "name": metadata.name,
+              "name": replace_all(metadata.name, '-kubeconfig', ''),
               "user": data.value | base64_decode(@) | parse_yaml(@).users[].user[] | [0] } || '\[\]'
           }}
         jmesPath: 'to_string(@)'
@@ -58,7 +58,7 @@ spec:
 #      variable:
 #        value: |
 #          {{ secretList | [].{
-#              "name": metadata.name,
+#              "name": replace_all(metadata.name, '-kubeconfig', ''),
 #              "context": { "cluster": metadata.name, "user": metadata.name } }
 #          }}
 #        jmesPath: 'to_string(@)'
@@ -66,8 +66,8 @@ spec:
       variable:
         value: |
           {{ secretList | [].{
-              "name": metadata.name,
-              "context": ['CLUSTER_BEGIN', metadata.name, 'CLUSTER_END', 'USER_BEGIN', metadata.name, 'USER_END'] } || '\[\]'
+              "name": replace_all(metadata.name, '-kubeconfig', ''),
+              "context": ['CLUSTER_BEGIN', replace_all(metadata.name, '-kubeconfig', ''), 'CLUSTER_END', 'USER_BEGIN', replace_all(metadata.name, '-kubeconfig', ''), 'USER_END'] } || '\[\]'
           }}
         jmesPath: "to_string(@) | replace_all(@, '[\"CLUSTER_BEGIN\",', '{\"cluster\":') | replace_all(@, '\"CLUSTER_END\",\"USER_BEGIN\",', '\"user\":') | replace_all(@, ',\"USER_END\"]', '}')"
     - name: kubeconfigData
